[Fix] 찌부, 배경색 wrap

--- a/static/css/map/list.css
+++ b/static/css/map/list.css
@@ -52,7 +52,7 @@ background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; 
 
 .color{
     display: flex;
-    justify-wrap: wrap;
+    flex-wrap: wrap;
     margin : 0.5rem 0;
 }
 .colortext{
@@ -62,6 +62,7 @@ background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; 
 }
 .colorbtn{
     margin-right: 0.4rem;
+    width : 10%;
 }
 .tag{
     margin : 0.5rem 0;
@@ -165,8 +166,11 @@ background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; 
 .img{
     cursor: pointer;
 }
+.imgcontent{
+    margin : auto;
 
-  .modal {
+}
+.modal {
     display: none; /* 모달창 숨겨 놓기 */
     position: fixed;
     z-index: 1; /* 모달창을 제일 앞에 두기 */
@@ -178,36 +182,35 @@ background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; 
     background-color: rgba(0, 0, 0, 0.8);
   }
 .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 2; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
-        }
-        /* Modal Content/Box */
-        .modal-content {
-            background-color:rgba(255,255,255);
-            margin: 15% auto; /* 15% from the top and centered */
-            padding: 5px;
-            border: none;
-            width: 70%; /* Could be more or less, depending on screen size */
-        }
-
-        /* The Close Button */
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+}
+/* Modal Content/Box */
+.modal-content {
+    background-color:rgba(255,255,255);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 5px;
+    border: none;
+    width: 70%; /* Could be more or less, depending on screen size */
+}
+ /* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
